# BioAcupunt-clinic-mtc

./: .bashrc  .env.example  .gitignore  AI_AGENT_RULES.md  CHANGELOG.md  CLAUDE.md  Canvas-2.dc.html  Canvas.dc.html  PENDENCIAS_BUILD.md  README.md  backend_structure.txt  backend_structure_v2.txt  build.gradle.kts  database-spec.md  gradle.properties  gradlew  gradlew.bat  local.defaults.properties  metadata.json  proguard-rules.pro  requirements-vercel.txt  settings.gradle.kts  vercel.json
backend/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  errors.py  events.py  limiter.py  security.py  supabase_client.py
backend/app/db/: all_models.py  session.py
backend/app/middleware/: request_audit.py
backend/app/models/: appointment.py  audit.py  auth.py  clinic.py  patient.py  schemas.py  sync.py  syncable.py  transaction.py  user.py
backend/app/repositories/: appointment_repository.py  patient_repository.py  sync_repository.py
backend/app/repository/: patient.py
backend/app/routers/: auth.py  library.py  patient.py  sync.py
backend/app/schemas/: appointment.py  auth.py  clinic.py  patient.py  sync.py
backend/app/services/: audit_service.py  auth_service.py  bootstrap.py  embedding.py  semantic_scholar.py  wikimedia.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/e2e/: test_auth_flow.py  (+4 more)
mkis-backend/: pyproject.toml
mkis-backend/app/: main.py
(+719 files in other folders)
