[project]
name = "bioacupunt-backend"
version = "0.1.0"
description = "BioAcupunt clinic backend — auth, clinics, patients, appointments, LGPD audit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: pure logic, no I/O",
    "integration: hits a real database",
    "e2e: full FastAPI app over HTTP",
]
