[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mkis-backend"
version = "0.1.0"
description = "Medical Knowledge Intelligence System backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text="Proprietary"}
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5",
    "pydantic>=2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "slowapi>=0.1",
]
